--- a/pratica_css.html
+++ b/pratica_css.html
@@ -30,8 +30,8 @@
 
 	<div style="width:500px; height: fit-content; background-color: aliceblue; border-radius: 25px; border: solid 2px rgb(36, 36, 141); margin: 20px; padding: 40px">
 
-		<div style="width: 100px; height: 100px; border-radius: 50%; margin-top: 20px; margin-bottom: 50px;">
-			<img src="https://cdn-icons-png.flaticon.com/512/706/706830.png">
+		<div class="container_image">
+			<img src="https://cdn-icons-png.flaticon.com/256/3681/3681928.png">
 		</div>
 
 		<div>
